# superman

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  superman_build_spec.md  tsconfig.base.json
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: StatusBadge.tsx
apps/desktop/src/lib/: api.ts  tauri.ts
services/orchestrator/: package.json  tsconfig.json
services/orchestrator/src/: app.ts  index.ts  server.ts
services/orchestrator/src/codex/: adapter.ts
services/orchestrator/src/db/: database.ts
services/orchestrator/src/discovery/: claude-sessions.test.ts  claude-sessions.ts  local-sessions.test.ts  local-sessions.ts
services/orchestrator/src/domain/: defaults.ts  prompts.ts  reducer.test.ts  reducer.ts  sessions.test.ts  sessions.ts
services/orchestrator/src/events/: bus.ts
services/orchestrator/src/exports/: handoff.ts
services/orchestrator/src/simulator/: adapter.ts
services/orchestrator/src/summaries/: queue-insights.ts  session-insights.ts
